- Improves Misc Linux Distro Handling
  * Now better labelled
- Improves Icon File Scanning
  * Optimises `VolumeIcon` and `VolumeBadges` searches
  * These items are now only scanned for displayed volumes
  * Improves loading speed by reducing disk I/O access
- Improves `macOS Installer` Handling
  * Now better identified and labelled
- Amends `Apple 'Fat' Binary` Handling
  * Now also assumed valid on UEFI-PC
  * Consistent with upstream implementation
    - `'Plain' Binaries` are assumed valid on Apple firmware
    - Upstream considers such invalid on all firmware types
- Amends `HideUIFlags` Handling
  * Now aligned with behaviour of other configuration tokens
    - Existing settings are now overridden by settings in supplementary/theme config files
    - Settings in supplementary/theme config files were previously added to existing ones
  * A new flag, `none`, was added
    - Allows reseting the token in supplementary/theme config files
    - Takes priority over all other settings whenever present
- Amends `Ventoy` Handling
  * `Whole Disk` volumes with `Legacy Bootcode` were previously hidden whenever `Ventoy` was present
    - This was to avoid spurious/unbootable instances appearing
      * This however affected legitimate instances without a way to override the behaviour
      * Users can hide unwanted instances if required
- Amends `GOP Graphics` Handling
  * GOP is now provided/replaced on the `ConsoleOut` handle by default when required
  * Hence, the "Opt-In" `provide_console_gop` token is replaced by the "Opt-Out" `disable_set_consolegop`
- Removes `HelpTags` Feature
  * The issue the feature was meant to fix does not actually exist
  * The associated `decline_help_tags` configuration token is now removed and ignored if set
- Renames Configuration Token
  * `decline_apple_fb` to `disable_set_applefb`


0.14.0.AB (03 Oct 2023):
-----------------------
- Adds `HelpScan` Feature